--- a/Pages/forms.html
+++ b/Pages/forms.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackburn</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="forms.css">
 </head>
 <body>
+    <div id="details" class="container-fluid bg-black text-white">
+        <form>
+            <input type="text" id="email" placeholder="Email">
+            <input type="text" id="password" placeholder="Password">
+            <button>login</button>
+        </form>
+        <p>Don't have an account?<a href="">signup</a></p>
+    </div>
     
 </body>
 </html>
