--- a/Pages/forms.html
+++ b/Pages/forms.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackburn</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="forms.css">
+    <link rel="stylesheet" href="CSS/forms.css">
 </head>
 <body>
-    <div id="details" class="container-fluid bg-black text-white">
-        <form>
-            <input type="text" id="email" placeholder="Email">
-            <input type="text" id="password" placeholder="Password">
-            <button>login</button>
-        </form>
+    <div id="details" class="container bg-black text-white text-center">
+        <div class="row">
+            <div class="col-lg-12 ">
+                <form>
+                    <input type="text" id="email" placeholder="Email">
+                    <input type="text" id="password" placeholder="Password">
+                    <button>login</button>
+                </form>
+            </div>
+        </div>
         <p>Don't have an account?<a href="">signup</a></p>
     </div>
     
