--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <section class="video">
+    <!-- background video -->
     <video autoplay muted loop class="myVideo">
       <source src="Assets/pexels-tima-miroshnichenko-6388436.mp4" type="video/mp4">
     </video>
@@ -37,7 +38,9 @@
               </ul>
             </div>
           </div>
+          <!-- navbar end -->
         </div>
+        
       </div>
     </div>
   </section>
