--- a/Pages/slim.html
+++ b/Pages/slim.html
@@ -7,8 +7,25 @@
     <title>Blackburn</title>
 </head>
 <body>
-    <div class="container">
-
+    <div class="container-fluid">
+        <div class="row justify-content-between mt-1">
+            <div class="col-lg-2 d-flex gap-2">
+              <div class="logo d-flex">
+                <p class="turn fs-1 fw-bold">B</p>
+                <p class="unturn fs-1 fw-bold"><span class="red">B</span></p>
+              </div>
+              <h1 class="fs-2 mt-2">Black<span class="red">Burn</span></h1>
+            </div>
+            <div class="col-lg-5 list">
+              <ul class="d-flex mt-3 fw-bold w-100 justify-content-between">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#"><span class="log">Log in</span></a></li>
+              </ul>
+            </div>
+          </div>
    <p class="slim">Wanna slim?<br>
 Awesome you are in the right space!</p>
 
@@ -25,7 +42,7 @@ Awesome you are in the right space!</p>
 
 
 
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link href="../CSS/slim.css" rel="stylesheet">
 
 
