--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../CSS/blog.css">
 </head>
 <body>
-    <head>
+    <head class="main-header">
         <nav>
             <ul>
                 <li>home</li>
