--- a/Pages/addweight.html
+++ b/Pages/addweight.html
@@ -27,5 +27,82 @@
           </ul>
         </div>
       </div>
+      <div class="container">
+            <h1 class="text">Hey there!<br>Do you want to add weight?<br>Well then you are in the right place.</h1>      
+      </div>
+      <div class="hero ">
+        <img src="../Assets/pexel3.png" class="rounded">
+      </div><br>
+      <div class="row">
+          <div class="col ">
+              <h2 class="text-center">Here are three key tips to gain weight</h2>
+              <ol class="text-center">
+                  <li>The most important thing you can do to gain weight is to create a calorie surplus, meaning you eat more calories than your body needs.</li><br>
+                  <li>The single most important nutrient for gaining healthy weight is protein.<br>Muscle is made of protein and without it most of those extra calories may end up as body fat.<br>So it is good to eat alot of protein</li><br>
+                    <li>Also, try to emphasize energy-dense foods as much as possible. These are foods that contain many calories relative to their weight.</li>
+
+              </ol>
+          </div>
+      </div> <br>
+      <div class="challenge align-content-center">
+          <h2 class="text-center">14 days exercise challenge to help yoi gain weight.Can you keep up...???</h2>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+            <label class="form-check-label" for="inlinecheckbox1">1:Squats</label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+            <label class="form-check-label" for="inlinecheckbox2">2:Push-ups</label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <label class="form-check-label" for="inlinecheckbox3">3:Bench Dips</label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <label class="form-check-label" for="inlinecheckbox3">4:Lunges</label>
+          </div>
+          <div class="form-check ">
+          <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+          <label class="form-check-label" for="inlinecheckbox3">5:Crunches</label>
+       </div>
+       <div class="form-check ">
+           <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+           <label class="form-check-label" for="inlinecheckbox3">6:Glute kickback</label>
+       </div>
+       <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <label class="form-check-label" for="inlinecheckbox3">7:Pull-Ups</label>
+        </div>
+        <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <label class="form-check-label" for="inlinecheckbox3">8:Bench press</label>
+        </div>
+        <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <label class="form-check-label" for="inlinecheckbox3">9:Deadlift</label>
+        </div>
+        <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <label class="form-check-label" for="inlinecheckbox3">10:Burpees</label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <label class="form-check-label" for="inlinecheckbox3">11:Overhead press</label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <label class="form-check-label" for="inlinecheckbox3">12:Mountain climbers</label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <label class="form-check-label" for="inlinecheckbox3">13:Jumping Jacks</label>
+          </div>
+          <div class="form-check ">
+            <input class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+            <label class="form-check-label" for="inlinecheckbox3">14:Side planks</label>
+          </div>
+      </div>
+    
 </body>
 </html>
