--- a/Pages/details.html
+++ b/Pages/details.html
@@ -6,32 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackburn</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/forms.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row text-center">
-            <div class="col-lg-5">
-                <form>
-                    <input type="text" id="first-name" placeholder="First Name">
+    <div class="container-1 container-fluid bg-black">
+        <div id="containers" class="my-container container">
+            <div class="row text-center">
+                <form class="my-row">
+                    <input class="color" type="text" id="first-name" placeholder="First Name">
+                    <input class="color" type="text" id="last-name" placeholder="Last Name">
                 </form>
+                <select class="color" placeholder="Gender" name="gender">
+                    <option id="my-gender" value="">Male</option>
+                    <option id="my-gender" value="">Female</option>
+                </select>
+                <input class="color" type="number" id="my-number" placeholder="Phone Number">
+                <input class="color" type="email" id="my-email" placeholder="Email">
+                <input class="color" type="text" id="my-password" placeholder="Password">
             </div>
-            <div class="col-lg-5">
-                <form>
-                    <input type="text" id="last-name" placeholder="Last Name">
-                </form>
+            <div class="row-2 row text-center">
             </div>
-        </div>
-        <div class="row text-center">
-            <select placeholder="Gender" name="gender" id="my-gender">
-                <option value="">Male</option>
-                <option value="">Female</option>
-            </select>
-            <input type="number" id="my-number" placeholder="Phone Number">
-            <input type="email" id="my-email" placeholder="Email">
-            <input type="text" id="my-password" placeholder="Password">
-        </div>
-        <div class="row">
-            <button>sign up</button>
+            <div class="my-button">
+                <button class="color">sign up</button>
+            </div>
         </div>
     </div>
 </body>
