Initial style of webpage is complete

--- a/Pages/slim.html
+++ b/Pages/slim.html
@@ -26,16 +26,31 @@
               </ul>
             </div>
           </div>
-   <p class="slim">Wanna slim?<br>
+          <img src="../Assets/Pic1.jpeg" class="pic1">
+   <p class="slim">Wanna Loose Weight?<br>
 Awesome you are in the right space!</p>
+<div class="image"></div>
 
 
 <div class="header">
-<h1>How to Lose Weight Fast in 3 Simple Steps</h1>
+<h1>How to Lose Weight Fast in 1 Simple Step</h1>
 </div>
-
+<div class="video">
+    <video width="1000" height="800" autoplay loop>
+        <source src="../Assets/video.mp4" type="video/mp4">
+      </video>
+      <p class="step">Battle ropes are a great way to burn calories.<br> They can burn upto 421 calories every hour.<br> They may look intimidating but they are an <br> easy and fun exercise to incorporate into your workout.</p>
+</div>
+<div class="back">
+<h2>Cut back on refined carbs</h2>
+<p class="cut">One way to lose weight quickly is to cut back on sugars and starches, or <br> carbohydrates. This could be with a low carb eating plan or by reducing <br> refined carbs and replacing them with whole grains.When you do that, your hunger levels go down, and you generally end up eating fewer calories</p>
+</div>
 <div class="rec">
-    <h2>14 days diet challenge</h2>
+    <h3>14 days diet challenge</h3>
+</div>
+<div class="summary">
+<h4>SUMMARY</h4>
+<P>Assemble each meal out of a protenin source, healthy fat<br> source, complex carb, and vegetables.<br> <br> Leafy green vegetables are a great way to bulk up a meal with <br>low calories and lots of nutrients, leaving you more full and satiated</P>
 </div>
 
 
