I have used js to make my fitness challenge responsive

--- a/Pages/slim.html
+++ b/Pages/slim.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackburn</title>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
     <div class="container-fluid">
@@ -27,29 +29,124 @@
             </div>
           </div>
           <img src="../Assets/Pic1.jpeg" class="pic1">
-   <p class="slim">Wanna Loose Weight?<br>
+   <p class="slim">Wanna Lose Weight?<br>
 Awesome you are in the right space!</p>
 <div class="image"></div>
 
 
 <div class="header">
-<h1>How to Lose Weight Fast in 1 Simple Step</h1>
+<p>How to Lose Weight <spam class="fast">Fast</spam> in 3 Simple Steps</p>
 </div>
 <div class="video">
     <video width="1000" height="800" autoplay loop>
         <source src="../Assets/video.mp4" type="video/mp4">
       </video>
-      <p class="step">Battle ropes are a great way to burn calories.<br> They can burn upto 421 calories every hour.<br> They may look intimidating but they are an <br> easy and fun exercise to incorporate into your workout.</p>
+      <h4> 1. Battle ropes</h4>
+      <p class="step">Battle ropes are a great way to burn calories.<br> They can burn upto 421 calories every hour.<br> They may look intimidating but they are an easy<br> and fun exercise to incorporate into your workout.</p>
 </div>
 <div class="back">
-<h2>Cut back on refined carbs</h2>
+<h2>2. Cut back on refined carbs</h2>
 <p class="cut">One way to lose weight quickly is to cut back on sugars and starches, or <br> carbohydrates. This could be with a low carb eating plan or by reducing <br> refined carbs and replacing them with whole grains.When you do that, your hunger levels go down, and you generally end up eating fewer calories</p>
 </div>
+<h3>3. Attempt a 14 Day <span class="fit">Fitness</span> Challenge</h3>
 <div class="rec">
-    <h3>14 days diet challenge</h3>
+    <div class="dropdown">
+            <button class="accordion">DAY1</button>
+        <div id="myDropdown">
+          <P>100 Jumps </P>
+          <P>100 skips</P>
+          <P>50 Jumping Jacks</P>
+        </div>
+    
+        <button class="accordion">DAY2</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <button class="accordion">DAY3</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <br>
+        <button class="accordion">DAY4</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <br>
+        <button class="accordion">DAY5</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <br>
+        <button class="accordion">DAY6</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <br>
+        <button class="accordion">DAY7</button>
+        <div id="myDropdown">
+          <P>REST</P>
+        </div>
+        <br>
+        <button class="accordion">DAY8</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <br>
+        <button class="accordion">DAY9</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <br>
+        <button class="accordion">DAY10</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <br>
+        <button class="accordion">DAY11</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <br>
+        <button class="accordion">DAY12</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <br>
+        <button class="accordion">DAY13</button>
+        <div id="myDropdown">
+          <P>Link 1</P>
+          <P>Link 1</P>
+          <P>Link 1</P>
+        </div>
+        <br>
+        <button class="accordion">DAY14</button>
+        <div id="myDropdown">
+          <P>REST</P>
+        </div>
+      </div>
 </div>
 <div class="summary">
-<h4>SUMMARY</h4>
+<h5>TIP</h5>
 <P>Assemble each meal out of a protenin source, healthy fat<br> source, complex carb, and vegetables.<br> <br> Leafy green vegetables are a great way to bulk up a meal with <br>low calories and lots of nutrients, leaving you more full and satiated</P>
 </div>
 
@@ -59,6 +156,7 @@ Awesome you are in the right space!</p>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link href="../CSS/slim.css" rel="stylesheet">
+<script src="../JS/slim.js"></script>
 
 
 
