--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -9,43 +9,44 @@
 </head>
 <body>
     <head class="main-header">
-        <nav>
+        <body>
             <ul>
-                <li>home</li>
+                <li>home</li> 
                 <li>about us</li>
                 <li>blog</li>
                 <li>contacts</li>
                 <li>log out</li>
             </ul>
         </nav>
-        <hr>
-     <h1>weight loss</h1>
-
+        
+         <h1>weight loss</h1>
 
 
     </head>
     <section>
-        <h2>about</h2>
-            <p>Anyone feeling frustrated by a fitness plateau will find help from blackburn,  this site was  started to help people break through their nutritional and training barriers.We provide the most advanced, scientifically proven methods. The blog features comprehensive information relating to specialized exercises and tips for improving technique and function
+        <div class="about">
+            <p class="ab">Anyone feeling frustrated by a fitness plateau will find help from blackburn,  this site was  started to help people break through their nutritional and training barriers.We provide the most advanced, scientifically proven methods. The blog features comprehensive information relating to specialized exercises and tips for improving technique and function
             </p>
             <p>
                 <img src="images/fetness.webp" alt="work hard and smart">
             </p>
+            </div>
             <br>
-            <p>the application can link the user to a professional trainer if required by the user
-            </p>the application olso gives vital information to the user on how much weight he/se has loose/gaine respectively
+            <h2> Assistance</h2>
+            <p class="info"> the application can link the user to a professional trainer if required by the user
+            the application olso gives vital information to the user on how much weight he/se has loose/gaine respectively
             <p>
-                <img src="images/asistance.jpeg" alt="instructures are friendly">
+                <img src="images/asistance.jpeg" alt="instructures are friendly" class="image">
             </p>
             <p>
-                we offer neutritional advice were needed.we have 
-                <p>
-                    <img src="images/healthy img.webp" alt="">
+                <p class="advise">we offer neutritional advice were needed.we have 
+                <p></p>
+                    <img src="images/healthy img.webp" alt="" class="image1">
                 
-                    <h5>fun fucts</h5>
-                    <p>exercise prevents signs of ageing. .....</p>
+                    <h3>fun fucts</h3>
+                    <p class="exercise">exercise prevents signs of ageing. .....</p>
                     <p>
-                        <img src="images/motivation.webp" alt="">
+                        <img src="images/motivation.webp" alt="" class="image2">
                     </p>
                 </p>
             </p>
