Ft: change order

--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -44,7 +44,7 @@
                     <img src="images/healthy img.webp" alt="" class="image1">
                 
                     <h3>fun fucts</h3>
-                    <p class="exercise">exercise prevents signs of ageing. .....</p>
+                    <p>exercise prevents signs of ageing. .....</p>
                     <p>
                         <img src="images/motivation.webp" alt="" class="image2">
                     </p>
