Ft: style text to end via bootstrap

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   <a href="#"><ion-icon class="fs-3 text-light" name="mail-outline"></ion-icon></a>
                   <a href="#"><ion-icon class="fs-3 text-light" name="call-outline"></ion-icon></a>        
                 </div>
-                <div class="col-lg-4 mt-2">
+                <div class="col-lg-4 mt-2 text-end">
                   <p>© 2022 Blackburn. Terms and conditions.</p>
                 </div>
               </div>
