--- a/Pages/addweight.html
+++ b/Pages/addweight.html
@@ -140,6 +140,25 @@
              </video></center>  
              <div class="mes">
                <p class="text-center align-content-center">Remember its always imoprtant to run but since your aiming at gaining weight.<br>DO NOT RUN FOR LONG HOURS YOU WILL BE BURNING ALOT OF CALORIES</p>
+               <section class="footer">
+                <footer class="amaze">
+                  <div class="row justify-content-between">
+                    <div class="col-lg-3 w-40 d-flex justify-content-around">
+                      <a href="#"><ion-icon class="fs-3 text-light" name="logo-facebook"></ion-icon></a>
+                      <a href="#"><ion-icon class="fs-3 text-light" name="logo-twitter"></ion-icon></a>
+                      <a href="#"><ion-icon class="fs-3 text-light" name="logo-instagram"></ion-icon></a>
+                      <a href="#"><ion-icon class="fs-3 text-light" name="mail-outline"></ion-icon></a>
+                      <a href="#"><ion-icon class="fs-3 text-light" name="call-outline"></ion-icon></a>        
+                    </div>
+                    <div class="col-lg-4 mt-2">
+                      <p>© 2022 Blackburn. Terms and conditions.</p>
+                    </div>
+                  </div>
+                  <div class="end text-center">
+                    <p>Website by Nacturnals</p>
+                  </div>
+                </footer>
+              </section>
              </div>
         </div>
       </div><br>
