--- a/Pages/slim.html
+++ b/Pages/slim.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blackburn</title>
+    <title>Blackburn</title>    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+     <link href="../CSS/slim.css" rel="stylesheet">
 </head>
 <body>
     <div class="container-fluid">
@@ -29,8 +31,10 @@
             </div>
           </div>
           <img src="../Assets/Pic1.jpeg" class="pic1">
-   <p class="slim">Wanna Lose Weight?<br>
-Awesome you are in the right space!</p>
+
+<p class="slim">Weight lose is <span class="hard1">Hard</span> work<br>
+Not magic<br> And we are prepared to make you work</p>
+
 <div class="image"></div>
 
 
@@ -38,7 +42,7 @@ Awesome you are in the right space!</p>
 <p>How to Lose Weight <spam class="fast">Fast</spam> in 3 Simple Steps</p>
 </div>
 <div class="video">
-    <video width="1000" height="800" autoplay loop>
+    <video width="1000" height="900" autoplay loop>
         <source src="../Assets/video.mp4" type="video/mp4">
       </video>
       <h4> 1. Battle ropes</h4>
@@ -48,48 +52,72 @@ Awesome you are in the right space!</p>
 <h2>2. Cut back on refined carbs</h2>
 <p class="cut">One way to lose weight quickly is to cut back on sugars and starches, or <br> carbohydrates. This could be with a low carb eating plan or by reducing <br> refined carbs and replacing them with whole grains.When you do that, your hunger levels go down, and you generally end up eating fewer calories</p>
 </div>
-<h3>3. Attempt a 14 Day <span class="fit">Fitness</span> Challenge</h3>
+<h3>3: Attempt a 14 Day <span class="fit">Fitness</span> Challenge</h3>
 <div class="rec">
     <div class="dropdown">
-            <button class="accordion">DAY1</button>
+        <p class="list">Once you click on a day a list will appear of exercises to perform. For maximum results follow this plan and eat at a calorie deficit.  </p>
+            <button class="accordion" style="padding-top: 2%;">DAY1</button>
         <div id="myDropdown">
-          <P>100 Jumps </P>
-          <P>100 skips</P>
-          <P>50 Jumping Jacks</P>
+            <p class="info">UPPER BODY WORKOUT</p>
+          <li> 10 Pushups</li>
+          <li>Pullups to failure </li>
+          <li>20 seconds Bar hang</li>
+          <li>30 second Plank </li>
+          <li>Bodyweight triceps extension to failure</li>
+          <li> 20 Ab crunches</li>
         </div>
     
         <button class="accordion">DAY2</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">LOWER BODY WORKOUT</p>
+            <li>10 Squats </li>
+            <li>20 lunges</li>
+            <li>50 Skips</li>
+            <li>50 Jumping Jacks</li>
+            <li>10 Minute jog</li>
         </div>
         <button class="accordion">DAY3</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">UPPER BODY WORKOUT</p>
+            <li> 15 Pushups</li>
+            <li>Pullups to failure </li>
+            <li>30 seconds Bar hang</li>
+            <li>40 second Plank </li>
+            <li>Bodyweight triceps extension to failure</li>
+            <li> 30 Ab crunches</li>
+
         </div>
         <br>
         <button class="accordion">DAY4</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">LOWER BODY WORKOUT</p>
+            <li>20 Squats </li>
+            <li>30 lunges</li>
+            <li>60 Skips</li>
+            <li>60 Jumping Jacks</li>
+            <li>20 Minute jog</li>
+         
         </div>
         <br>
         <button class="accordion">DAY5</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">HIIT CARDIO</p>
+            <li>Bike sprint </li>
+            <li>Battle ropes</li>
+            <li>20 minute run with 1 minute rest every 5 minutes</li>
+            <li>100 Skips</li>
+            <li> 50 Jumping Squats</li>
+
         </div>
         <br>
         <button class="accordion">DAY6</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">HIIT CARDIO</p>
+            <li>Bike sprint </li>
+            <li>Battle ropes</li>
+            <li>20 minute run with 1 minute rest every 5 minutes</li>
+            <li>100 Skips</li>
+            <li> 50 Jumping Squats</li>
         </div>
         <br>
         <button class="accordion">DAY7</button>
@@ -99,44 +127,64 @@ Awesome you are in the right space!</p>
         <br>
         <button class="accordion">DAY8</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">UPPER BODY WORKOUT</p>
+            <li> 20 Pushups</li>
+            <li>Pullups to failure </li>
+            <li>35 seconds Bar hang</li>
+            <li>45 second Plank </li>
+            <li>Bodyweight triceps extension to failure</li>
+            <li> 40 Ab crunches</li>
         </div>
         <br>
         <button class="accordion">DAY9</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">LOWER BODY WORKOUT</p>
+            <li>20 Squats </li>
+            <li>30 lunges</li>
+            <li>60 Skips</li>
+            <li>60 Jumping Jacks</li>
+            <li>20 Minute jog</li>
         </div>
         <br>
         <button class="accordion">DAY10</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">UPPER BODY WORKOUT</p>
+            <li> Pushups to failure</li>
+            <li>Pullups to failure </li>
+            <li>Bar hang to failure</li>
+            <li>Plank to failure </li>
+            <li>Bodyweight triceps extension to failure</li>
+            <li> 45 Ab crunches with rests</li>
         </div>
         <br>
         <button class="accordion">DAY11</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">LOWER BODY WORKOUT</p>
+            <li>30 Squats </li>
+            <li>40 lunges</li>
+            <li>70 Skips</li>
+            <li>70 Jumping Jacks</li>
+            <li>25 Minute jog</li>
         </div>
         <br>
         <button class="accordion">DAY12</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">HIIT CARDIO</p>
+            <li>Bike sprint </li>
+            <li>Battle ropes</li>
+            <li>20 minute run with 1 minute rest every 5 minutes</li>
+            <li>100 Skips</li>
+            <li> 50 Jumping Squats</li>
         </div>
         <br>
         <button class="accordion">DAY13</button>
         <div id="myDropdown">
-          <P>Link 1</P>
-          <P>Link 1</P>
-          <P>Link 1</P>
+            <p class="info">HIIT CARDIO</p>
+            <li>Bike sprint </li>
+            <li>Battle ropes</li>
+            <li>20 minute run with 1 minute rest every 5 minutes</li>
+            <li>100 Skips</li>
+            <li> 50 Jumping Squats</li>
         </div>
         <br>
         <button class="accordion">DAY14</button>
@@ -153,13 +201,25 @@ Awesome you are in the right space!</p>
 
 
 
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link href="../CSS/slim.css" rel="stylesheet">
-<script src="../JS/slim.js"></script>
-
-
-
+<section class="footer">
+    <footer class="amaze">
+      <div class="row justify-content-between">
+        <div class="col-lg-3 w-40 d-flex justify-content-around">
+          <a href="#"><ion-icon class="fs-3 text-light" name="logo-facebook"></ion-icon></a>
+          <a href="#"><ion-icon class="fs-3 text-light" name="logo-twitter"></ion-icon></a>
+          <a href="#"><ion-icon class="fs-3 text-light" name="logo-instagram"></ion-icon></a>
+          <a href="#"><ion-icon class="fs-3 text-light" name="mail-outline"></ion-icon></a>
+          <a href="#"><ion-icon class="fs-3 text-light" name="call-outline"></ion-icon></a>        
+        </div>
+        <div class="col-lg-4 mt-2">
+          <p>© 2022 Blackburn. Terms and conditions.</p>
+        </div>
+      </div>
+      <div class="end text-center">
+        <p>Website by Nacturnals</p>
+      </div>
+    </footer>
+  </section>
 
 
 
@@ -167,5 +227,6 @@ Awesome you are in the right space!</p>
 
 
    </div>
+   <script src="../JS/slim.js"></script>
 </body>
 </html>
