--- a/Pages/addweight.html
+++ b/Pages/addweight.html
@@ -133,7 +133,7 @@
           <h2 class="text-center">What exercises to avoid</h2><br>
           <p class="text-center justify-content-around">To gain weight, minimize aerobic and cardio exercises. These are meant to burn fat and tone muscle, not bulk you up.<br>
 
-            You don’t have to avoid them entirely, though. You can do these exercises in moderation to tone your muscles.<br> This will help you build definition so that you can achieve the look that you want.</p><br>
+            You dont have to avoid them entirely, though. You can do these exercises in moderation to tone your muscles.<br> This will help you build definition so that you can achieve the look that you want.</p><br>
             <div class="vid">
              <center><video class="w-50" width="720" controls>
               <source src="../Assets/joggin.mp4" type="video/mp4">
