add footer in blog.html

--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -5,24 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blackburn</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/blog.css">
 </head>
 <body>
-    <head class="main-header">
-        <body>
-            <ul>
-                <li>home</li> 
-                <li>about us</li>
-                <li>blog</li>
-                <li>contacts</li>
-                <li>log out</li>
-            </ul>
-        </nav>
-        
-         <h1>weight loss</h1>
-
-
-    </head>
+    <section class="start">
+        <div class="row justify-content-between mt-1 px-3">
+            <div class="col-lg-2 d-flex gap-2">
+              <div class="logo d-flex">
+                <p class="turn fs-1 fw-bold">B</p>
+                <p class="unturn fs-1 fw-bold"><span class="red">B</span></p>
+              </div>
+              <h1 class="fs-2 mt-2">Black<span class="red">Burn</span></h1>
+            </div>
+            <div class="col-lg-5 list">
+              <ul class="d-flex mt-3 fw-bold w-100 justify-content-between text-light">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#"><span class="log">Log in</span></a></li>
+              </ul>
+            </div>
+          </div>
+    </section>
     <section>
         <div class="about">
             <p class="ab">Anyone feeling frustrated by a fitness plateau will find help from blackburn,  this site was  started to help people break through their nutritional and training barriers.We provide the most advanced, scientifically proven methods. The blog features comprehensive information relating to specialized exercises and tips for improving technique and function
@@ -50,6 +56,26 @@
                     </p>
                 </p>
             </p>
+
+          <section class="footer">
+            <footer class="amaze">
+              <div class="row justify-content-between">
+                <div class="col-lg-3 w-40 d-flex justify-content-around">
+                  <a href="#"><ion-icon class="fs-3 text-light" name="logo-facebook"></ion-icon></a>
+                  <a href="#"><ion-icon class="fs-3 text-light" name="logo-twitter"></ion-icon></a>
+                  <a href="#"><ion-icon class="fs-3 text-light" name="logo-instagram"></ion-icon></a>
+                  <a href="#"><ion-icon class="fs-3 text-light" name="mail-outline"></ion-icon></a>
+                  <a href="#"><ion-icon class="fs-3 text-light" name="call-outline"></ion-icon></a>        
+                </div>
+                <div class="col-lg-4 mt-2 text-end">
+                  <p>© 2022 Blackburn. Terms and conditions.</p>
+                </div>
+              </div>
+              <div class="end text-center">
+                <p>Website by Nacturnals</p>
+              </div>
+            </footer>
+          </section>
     
 </body>
 </html>
