--- a/Pages/willi.html
+++ b/Pages/willi.html
@@ -190,6 +190,31 @@
                 </div>
             </form>
         </div>
+
+        <!-- Footer section -->
+        <section class="footer">
+            <footer class="amaze">
+              <div class="row justify-content-between">
+                <div class="col-lg-3 w-40 d-flex justify-content-around">
+                  <a href="#"><ion-icon class="fs-3 text-light" name="logo-facebook"></ion-icon></a>
+                  <a href="#"><ion-icon class="fs-3 text-light" name="logo-twitter"></ion-icon></a>
+                  <a href="#"><ion-icon class="fs-3 text-light" name="logo-instagram"></ion-icon></a>
+                  <a href="#"><ion-icon class="fs-3 text-light" name="mail-outline"></ion-icon></a>
+                  <a href="#"><ion-icon class="fs-3 text-light" name="call-outline"></ion-icon></a>        
+                </div>
+                <div class="col-lg-4 mt-2 text-end">
+                  <p>© 2022 Blackburn. Terms and conditions.</p>
+                </div>
+              </div>
+              <div class="end text-center">
+                <p>Website by Nacturnals</p>
+              </div>
+            </footer>
+          </section>
+          <!-- footer end -->
+      </div>
+    </div>
+  </section>
     
 
 </body>
