More changes to the style of the page

--- a/Pages/slim.html
+++ b/Pages/slim.html
@@ -42,12 +42,13 @@ Not magic<br> And we are prepared to make you work</p>
 <p>How to Lose Weight <spam class="fast">Fast</spam> in 3 Simple Steps</p>
 </div>
 <div class="video">
-    <video width="1000" height="900" autoplay loop>
-        <source src="../Assets/video.mp4" type="video/mp4">
+    <video autoplay loop muted width="1000" height="800">
+        <source src="../Assets/video.ogg" type="video/ogg">
       </video>
       <h4> 1. Battle ropes</h4>
       <p class="step">Battle ropes are a great way to burn calories.<br> They can burn upto 421 calories every hour.<br> They may look intimidating but they are an easy<br> and fun exercise to incorporate into your workout.</p>
 </div>
+<img src="../Assets/carbs.jpg" class="carb">
 <div class="back">
 <h2>2. Cut back on refined carbs</h2>
 <p class="cut">One way to lose weight quickly is to cut back on sugars and starches, or <br> carbohydrates. This could be with a low carb eating plan or by reducing <br> refined carbs and replacing them with whole grains.When you do that, your hunger levels go down, and you generally end up eating fewer calories</p>
@@ -122,7 +123,7 @@ Not magic<br> And we are prepared to make you work</p>
         <br>
         <button class="accordion">DAY7</button>
         <div id="myDropdown">
-          <P>REST</P>
+          <P style="font-size: 150%;">REST</P>
         </div>
         <br>
         <button class="accordion">DAY8</button>
@@ -189,14 +190,23 @@ Not magic<br> And we are prepared to make you work</p>
         <br>
         <button class="accordion">DAY14</button>
         <div id="myDropdown">
-          <P>REST</P>
+          <P style="font-size: 150%;">REST</P>
         </div>
       </div>
 </div>
 <div class="summary">
 <h5>TIP</h5>
 <P>Assemble each meal out of a protenin source, healthy fat<br> source, complex carb, and vegetables.<br> <br> Leafy green vegetables are a great way to bulk up a meal with <br>low calories and lots of nutrients, leaving you more full and satiated</P>
+<div class="line">
+<h6>REPLACEMENT OPTIONS</h6>
+<li>Cauliflower rice instead of rice</li>
+<li>Brown bread instead of white bread</li>
+<li>Sweet potatoes instead of Potatoes</li>
+<li> Brown pasta instead of regular pasta</li>
+<li> Zero sugar drinks instead of high sugar drinks</li>
 </div>
+</div>
+
 
 
 
