--- a/Pages/details.html
+++ b/Pages/details.html
@@ -5,31 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackburn</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/forms.css">
 </head>
 <body>
     <div class="container-1 container-fluid bg-black">
-        <div id="containers" class="my-container container">
-            <div class="row text-center">
-                <form class="my-row">
-                    <input class="color" type="text" id="first-name" placeholder="First Name">
-                    <input class="color" type="text" id="last-name" placeholder="Last Name">
-                </form>
-                <select class="color" placeholder="Gender" name="gender">
-                    <option id="my-gender" value="">Male</option>
-                    <option id="my-gender" value="">Female</option>
-                </select>
-                <input class="color" type="number" id="my-number" placeholder="Phone Number">
-                <input class="color" type="email" id="my-email" placeholder="Email">
-                <input class="color" type="text" id="my-password" placeholder="Password">
-            </div>
-            <div class="row-2 row text-center">
-            </div>
-            <div class="my-button">
-                <button class="color">sign up</button>
-            </div>
+        <div id="containers" class="container">
+            <form onsubmit="signup()">
+                <div class="row text-center mimeey d-flex flex-column justify-content-center">
+                    <div class="division d-flex">
+                        <input class="color w-100 all" type="text" id="first-name" placeholder="First Name" required>
+                        <input class="color w-100 all" type="text" id="last-name" placeholder="Last Name" required>
+                    </div>
+                    <select class="color" placeholder="Gender" name="gender" required>
+                        <option id="my-gender" value="">Select</option>
+                        <option id="my-gender" value="">Male</option>
+                        <option id="my-gender" value="">Female</option>
+                    </select>
+                    <input class="color" type="number" id="my-number" placeholder="Phone Number" required>
+                    <input class="color" type="email" id="my-email" placeholder="Email" required>
+                    <input class="color" type="text" id="my-password" placeholder="Password" required>
+                    <div class="my-button">
+                        <button class="color w-25" type="submit">sign up</button>
+                    </div>
+                </div>
+                <p id="demo"></p>
+            </form>
         </div>
     </div>
+    <script src="../JS/forms.js"></script>
 </body>
 </html>
