--- a/Pages/forms.html
+++ b/Pages/forms.html
@@ -5,20 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackburn</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/forms.css">
 </head>
 <body>
     <div class="container-fluid bg-black">
         <div id="details" class="form-1 container justify-content-center">
-            <form>
-                <input class="input" type="text" id="email" placeholder="Email">
-                <input  class="input" type="text" id="password" placeholder="Password">
-                <button class="input">login</button>
-                <p>Don't have an account?<a href="">signup</a></p>
-            </form>
+            <div class="bottle">
+                <form class="my-class d-flex flex-column h-50 justify-content-between text-light" onsubmit="signin()">
+                    <input class="input" type="email" id="email" placeholder="Email">
+                    <!-- Password field -->
+                    <input type="password" value="" id="myInput" class="input" placeholder="Password">
+
+                    <!-- An element to toggle between password visibility -->
+                    <div class="checkbox">
+                        <input type="checkbox" onclick="myFunction()" class="mt-1">
+                        <span class="mx-1">Show Password</span>
+                    </div>
+                    <div class="buttonny d-flex flex-column">
+                        <button id="button" type="submit" class="input w-25" value="submit">login</button>
+                        <p>Don't have an account?<a href="#"> sign up</a></p>
+                    </div>
+                    <div id="result" class="text-center fw-bold"></div>
+              </form>
+            </div>
         </div>
     </div>
-    
+    <script src="../JS/forms.js"></script>
 </body>
 </html>
