--- a/Pages/weight.html
+++ b/Pages/weight.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container-fluid bg-black">
         <div id="weight" class="lastpage container justify-content-center">
-            <button class="button" >Add Weight</button>
-            <button class="button" >maintain Weight</button>
-            <button class="button" >Loose Weight</button>
+            <a class="button" href="addweight.html"><button class="but">Add Weight</button></a>
+            <a class="button" href="willi.html"><button class="but">maintain Weight</button></a>
+            <a class="button" href="slim.html"><button class="but">Loose Weight</button></a>
         </div>
     </div>
     <script src="../JS/forms.js"></script>
