--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
               <ul class="d-flex mt-3 fw-bold w-100 justify-content-between">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="Pages/blog.html">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#"><span class="log">Log in</span></a></li>
+                <li><a href="Pages/forms.html"><span class="log">Log in</span></a></li>
               </ul>
             </div>
           </div>
