--- a/Pages/forms.html
+++ b/Pages/forms.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="buttonny d-flex flex-column">
                         <button id="button" type="submit" class="input w-25" value="submit">login</button>
-                        <p>Don't have an account?<a href="#"> sign up</a></p>
+                        <p>Don't have an account?<a href="details.html"> sign up</a></p>
                     </div>
                     <div id="result" class="text-center fw-bold"></div>
               </form>
