--- a/Pages/willi.html
+++ b/Pages/willi.html
@@ -23,13 +23,13 @@
           <h1 class="fs-2 mt-2" style="color: white;">Black<span class="red">Burn</span></h1>
         </div>
         <div class="col-lg-5 list">
-          <ul class="d-flex mt-3 fw-bold w-100 justify-content-between">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#"><span class="log">Log in</span></a></li>
-          </ul>
+            <ul class="d-flex mt-3 fw-bold w-100 justify-content-around">
+                <li><a href="weight.html">Home</a></li>
+                <!-- <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li> -->
+                <li><a href="../index.html"><span class="log">Log out</span></a></li>
+              </ul>
         </div>
       </div>
     <section id="hero">
