--- a/Pages/slim.html
+++ b/Pages/slim.html
@@ -11,6 +11,9 @@
      <link href="../CSS/slim.css" rel="stylesheet">
 </head>
 <body>
+    <section class="content">
+        <div class="overlay">
+            <div class="nav">
     <div class="container-fluid">
         <div class="row justify-content-between mt-1">
             <div class="col-lg-2 d-flex gap-2">
@@ -30,12 +33,12 @@
               </ul>
             </div>
           </div>
+          </div>
+        </div>
           <img src="../Assets/Pic1.jpeg" class="pic1">
 
 <p class="slim">Weight lose is <span class="hard1">Hard</span> work<br>
 Not magic<br> And we are prepared to make you work</p>
-
-<div class="image"></div>
 
 
 <div class="header">
@@ -44,7 +47,7 @@ Not magic<br> And we are prepared to make you work</p>
 <div class="video">
     <video autoplay loop muted width="1000" height="800">
         <source src="../Assets/video.ogg" type="video/ogg">
-      </video>
+      </video>0
       <h4> 1. Battle ropes</h4>
       <p class="step">Battle ropes are a great way to burn calories.<br> They can burn upto 421 calories every hour.<br> They may look intimidating but they are an easy<br> and fun exercise to incorporate into your workout.</p>
 </div>
@@ -197,6 +200,7 @@ Not magic<br> And we are prepared to make you work</p>
 <div class="summary">
 <h5>TIP</h5>
 <P>Assemble each meal out of a protenin source, healthy fat<br> source, complex carb, and vegetables.<br> <br> Leafy green vegetables are a great way to bulk up a meal with <br>low calories and lots of nutrients, leaving you more full and satiated</P>
+</div>
 <div class="line">
 <h6>REPLACEMENT OPTIONS</h6>
 <li>Cauliflower rice instead of rice</li>
@@ -204,7 +208,6 @@ Not magic<br> And we are prepared to make you work</p>
 <li>Sweet potatoes instead of Potatoes</li>
 <li> Brown pasta instead of regular pasta</li>
 <li> Zero sugar drinks instead of high sugar drinks</li>
-</div>
 </div>
 
 
@@ -237,6 +240,7 @@ Not magic<br> And we are prepared to make you work</p>
 
 
    </div>
+ </section>
    <script src="../JS/slim.js"></script>
 </body>
 </html>
